--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.0.2",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -18,8 +19,26 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ng-icons/core": "^29.10.0",
+    "@ng-icons/lucide": ">=29.0.0",
+    "@spartan-ng/ui-button-helm": "0.0.1-alpha.357",
+    "@spartan-ng/ui-checkbox-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-command-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.357",
+    "@spartan-ng/ui-dialog-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-formfield-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-forms-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-icon-helm": "0.0.1-alpha.357",
+    "@spartan-ng/ui-menu-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-popover-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-select-brain": "0.0.1-alpha.357",
+    "@spartan-ng/ui-table-brain": "0.0.1-alpha.357",
+    "@tanstack/angular-table": "^8.20.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-angular": "^0.464.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -27,6 +46,7 @@
     "@angular-devkit/build-angular": "^19.0.2",
     "@angular/cli": "^19.0.2",
     "@angular/compiler-cli": "^19.0.0",
+    "@spartan-ng/cli": "^0.0.1-alpha.367",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.4.0",
@@ -36,7 +56,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.6.2"
   }
 }
