--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,41 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/app/*"]
+      "@/*": [
+        "src/app/*"
+      ],
+      "@spartan-ng/ui-table-helm": [
+        ".\\libs/ui/ui-table-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-checkbox-helm": [
+        ".\\libs/ui/ui-checkbox-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-icon-helm": [
+        ".\\libs/ui/ui-icon-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-menu-helm": [
+        ".\\libs/ui/ui-menu-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-button-helm": [
+        ".\\libs/ui/ui-button-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-input-helm": [
+        ".\\libs/ui/ui-input-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-select-helm": [
+        ".\\libs/ui/ui-select-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-formfield-helm": [
+        ".\\libs/ui/ui-formfield-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-command-helm": [
+        ".\\libs/ui/ui-command-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-popover-helm": [
+        ".\\libs/ui/ui-popover-helm/src/index.ts"
+      ]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
